--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "remix-router-ng",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
+    "dev": "ng serve",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development"
